--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,7 @@
   --bg-light-secondary: #f1f3f8bf;
   --bg-hover-button: #6570FF1A;
   --bg-hover-button-border: #C3C7FF;
+  --bg-table-body: #F7F9FC;
 
   // Status colors
   --status-open-text: #00B0BF;
